--- a/content/2015-09-22-08-59-Index.md
+++ b/content/2015-09-22-08-59-Index.md
@@ -4,18 +4,19 @@ This entry will serve as an index of projects I consider noteworthy. I hope you 
 
 **Articles**
 
-* _Creating a GitHub-Powered Blog_
-  - Learn how to use Haxe to target JavaScript and create a single-page blog that fetches content via the GitHub API
-  * [Part 1 of 3][1]
-  * [Part 2 of 3][2]
-  * [Part 3 of 3][3]
+_Creating a GitHub-Powered Blog_
+* Learn how to use Haxe to target JavaScript and create a single-page blog that fetches content via the GitHub API
+* [Part 1 of 3][1]
+* [Part 2 of 3][2]
+* [Part 3 of 3][3]
 
 **Projects**
 
-* [_Last.fm Streamgraph_][4]
-  * Create a streamgraph of your Last.fm listening history thanks to the wonders of JavaScript and D3.js
-* [_TOCHKA_][5]
-  * A simple game, in the vein of Flappy Bird, developed with Haxe and the HaxePunk library
+[_Last.fm Streamgraph_][4]
+* Create a streamgraph of your Last.fm listening history thanks to the wonders of JavaScript and D3.js
+
+[_TOCHKA_][5]
+* A simple game, in the vein of Flappy Bird, developed with Haxe and the HaxePunk library
 
 [1]: #/contents/content/2015-09-28-17-38-Creating-a-GitHub-Powered-Blog-(1).md
 [2]: #/contents/content/2015-09-28-21-07-Creating-a-GitHub-Powered-Blog-(2).md
