One more guess.

--- a/content/2015-09-22-08-59-Index.md
+++ b/content/2015-09-22-08-59-Index.md
@@ -7,9 +7,9 @@ This entry will serve as an index of projects I consider noteworthy. I hope you 
 _Creating a GitHub-Powered Blog_
 
 * Learn how to use Haxe to target JavaScript and create a single-page blog that fetches content via the GitHub API
-* [Part 1 of 3][1]
-* [Part 2 of 3][2]
-* [Part 3 of 3][3]
+* [Part 1][1]
+* [Part 2][2]
+* [Part 3][3]
 
 **Projects**
 
