--- a/content/2015-09-22-08-59-Index.md
+++ b/content/2015-09-22-08-59-Index.md
@@ -7,20 +7,14 @@ This entry will serve as an index of projects I consider noteworthy. I hope you 
 _Creating a GitHub-Powered Blog_
 
 * Learn how to use Haxe to target JavaScript and create a single-page blog that fetches content via the GitHub API
-* [Part 1][1], [Part 3][3], [Part 2][2]
+* <a href="#/contents/content/2015-09-28-17-38-Creating-a-GitHub-Powered-Blog-(1).md">Part 1</a>, <a href="#/contents/content/2015-09-28-21-07-Creating-a-GitHub-Powered-Blog-(2).md">Part 2</a>, <a href="#/contents/content/2015-10-01-12-04-Creating-a-GitHub-Powered-Blog-(3).md">Part 3</a>
 
 **Projects**
 
-[_Last.fm Streamgraph_][4]
+[_Last.fm Streamgraph_](http://dstrekelj.github.io/last.fm-streamgraph/)
 
 * Create a streamgraph of your Last.fm listening history thanks to the wonders of JavaScript and D3.js
 
-[_TOCHKA_][5]
+[_TOCHKA_](http://dstrekelj.github.io/tochka/)
 
 * A simple game, in the vein of Flappy Bird, developed with Haxe and the HaxePunk library
-
-[1]: #/contents/content/2015-09-28-17-38-Creating-a-GitHub-Powered-Blog-(1).md
-[2]: #/contents/content/2015-09-28-21-07-Creating-a-GitHub-Powered-Blog-(2).md
-[3]: #/contents/content/2015-10-01-12-04-Creating-a-GitHub-Powered-Blog-(3).md
-[4]: http://dstrekelj.github.io/last.fm-streamgraph/
-[5]: http://dstrekelj.github.io/tochka/
